<resources>
    <string name="app_name">Hotel Test</string>

    <string name="hotel">Отель</string>
    <string name="to_choose_room">К выбору номера</string>
    <string name="five_stars">5 Превосходно</string>
    <string name="for_tour">за тур с перелётом</string>
    <string name="about_hotel">Об отеле</string>
    <string name="facilities">Удобства</string>
    <string name="most_necessary">Самое необходимое</string>
    <string name="what_included">Что включено</string>
    <string name="what_not_included">Что не включено</string>
    <string name="price_from">от %d ₽</string>


    <string name="more_about_room">Подробнее о номере</string>
    <string name="for_seven_day">за 7 ночей с перелётом</string>
    <string name="choose_room">Выбрать номер</string>
    <string name="price_d">%d ₽</string>


    <string name="order_was_paid">Заказ оплачен</string>
    <string name="super_s">Супер!</string>
    <string name="order_accepted">Ваш заказ принят в работу</string>
    <string name="сonfirmation_of_order">Подтверждение заказа №%d может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>


    <string name="ticking">Бронирование</string>
    <string name="departure_from">Вылет из</string>
    <string name="cc">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="night_count">Кол-во ночей</string>
    <string name="d_night">%d ночей</string>
    <string name="room">Номер</string>
    <string name="food">Питание</string>
    <string name="customer_info">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="info_privacy">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birth_date">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="passport_period">Срок действия загранпаспорта</string>
    <string name="tour">Тур</string>
    <string name="fuel">Топливный сбор</string>
    <string name="service">Сервисный сбор</string>
    <string name="to_pay">К оплате</string>
    <string name="pay_d">Оплатить %s ₽</string>
    <string name="error">Что-то пошло не так.\nПроверьте соединение с сетью</string>

    <string name="first">Первый</string>
    <string name="second">Второй</string>
    <string name="third">Третий</string>
    <string name="fourth">Четвёртый</string>
    <string name="fifth">Пятый</string>
    <string name="sixth">Шестой</string>
    <string name="seventh">Седьмой</string>
    <string name="s_tourist">%s турист</string>
</resources>