<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_rounded_white_15"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_info"
        android:textAppearance="@style/TextTitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/mTextInput"
        android:hint="@string/phone_number"
       >

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:singleLine="true"
            app:mask="+7 (9##) ###-##-##"
            android:textAppearance="@style/TextRegular16.Black"
            android:inputType="phone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/mTextInput"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:singleLine="true"
            android:textAppearance="@style/TextRegular16.Black"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/info_privacy"
        android:textAppearance="@style/TextRegular14.Addition"/>

</LinearLayout>