<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/mToolbar"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
        >

        <TextView
            android:id="@+id/tvToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:text = "@string/order_was_paid"
            android:textAppearance="@style/TextToolbar"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivOrderStatusIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_party"
            android:background="@drawable/shape_circle_gray"
            android:padding="25dp" />

        <TextView
            android:id="@+id/tvOrderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:textAppearance="@style/TextTitle"
            android:text="@string/order_accepted"/>

        <TextView
            android:id="@+id/tvOrderConfirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextRegular16.Addition"
            android:text="@string/сonfirmation_of_order"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/super_s"/>

</LinearLayout>