<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:background="@drawable/shape_rounded_white_15"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tour"
            android:textAppearance="@style/TextRegular16.Addition"/>

        <TextView
            android:id="@+id/tvTourPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            tools:text = "186 600 ₽"
            android:textAppearance="@style/TextRegular16.Black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel"
            android:textAppearance="@style/TextRegular16.Addition"/>

        <TextView
            android:id="@+id/tvFuelPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            tools:text = "9 300 ₽"
            android:textAppearance="@style/TextRegular16.Black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service"
            android:textAppearance="@style/TextRegular16.Addition"/>

        <TextView
            android:id="@+id/tvServicePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            tools:text = "2 136 ₽"
            android:textAppearance="@style/TextRegular16.Black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_pay"
            android:textAppearance="@style/TextRegular16.Addition"/>

        <TextView
            android:id="@+id/tvToPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            tools:text = "198 036 ₽"
            android:textAppearance="@style/TextRegular16.Black"/>

    </LinearLayout>

</LinearLayout>