<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/shape_rounded_white_15"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTouristNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_tourist"
            android:textAppearance="@style/TextTitle" />

        <FrameLayout
            android:id="@+id/flShowTouristInfo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="5dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/selector_add_btn">

            <ImageView
                android:id="@+id/ivIconTouristInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:duplicateParentState="true"
                android:src="@drawable/selector_add_icon" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llInputTourist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etName"
            style="@style/mTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:paddingTop="30dp"
                android:singleLine="true"
                android:textAppearance="@style/TextRegular16.Black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etSurname"
            style="@style/mTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/surname">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:paddingTop="30dp"
                android:singleLine="true"
                android:textAppearance="@style/TextRegular16.Black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etBirthDate"
            style="@style/mTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/birth_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:paddingTop="30dp"
                android:singleLine="true"
                android:textAppearance="@style/TextRegular16.Black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etCitizenship"
            style="@style/mTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/citizenship">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:paddingTop="30dp"
                android:singleLine="true"
                android:textAppearance="@style/TextRegular16.Black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassportNumber"
            style="@style/mTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/passport_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:paddingTop="30dp"
                android:singleLine="true"
                android:textAppearance="@style/TextRegular16.Black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassportPeriod"
            style="@style/mTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/passport_period">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:paddingTop="30dp"
                android:singleLine="true"
                android:textAppearance="@style/TextRegular16.Black" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


</LinearLayout>