<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/shape_rounded_white_12"
    android:layout_marginVertical="4dp"
    android:padding="16dp">

    <com.bbj.hoteltest.ui.common.ImageSliderWithIndicator
        android:id="@+id/isSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvHotelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/TextTitle"
        tools:text="Стандартный с видом на бассейн или сад" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexRoomAdvantages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dividerDrawable="@drawable/spacer_8"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:showDivider="middle"/>

    <LinearLayout
        android:id="@+id/llDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingVertical="5dp"
        android:background="@drawable/shape_rounded_blue_transparent_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/more_about_room"
            android:textColor="@color/blue"
            android:textAppearance="@style/TextMedium16"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward"
            app:tintMode = "src_atop"
            app:tint="@color/blue" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHotelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "186 600 ₽"
            android:textAppearance="@style/TextPrice"/>

        <TextView
            android:id="@+id/tvHotelPricePer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="@string/for_seven_day"
            android:textAppearance="@style/TextRegular16.Addition"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChooseRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_room"/>


</LinearLayout>