<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/mToolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:text="@string/hotel"
            android:textAppearance="@style/TextToolbar" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/svBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical">

            <include
                android:id="@+id/include_hotel_preview"
                layout="@layout/include_hotel_preview" />

            <include
                android:id="@+id/include_hotel_about"
                layout="@layout/include_hotel_about" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/flStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_weight="1">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/piProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorColor="@color/blue"
            app:indicatorSize="50dp"
            app:trackThickness="8dp" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/error"
            android:textAppearance="@style/TextTitle"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="top"
            android:background="#E8E9EC" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToChooseRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="top"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="28dp"
            android:text="@string/to_choose_room" />

    </FrameLayout>

</LinearLayout>